# final-project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.airflow  README.md  airflow-trino-cloudflare-iceberg-interview.md  docker-compose.yml  pyproject.toml  setup-values-guide.md
collectors/: areas.txt  r2_storage.py  run_collect.py  seoul_citydata.py  trino_loader.py
dags/: seoul_ppltn_collect.py
dbt/seoul_ppltn/: .user.yml  dbt_project.yml  profiles.yml
dbt/seoul_ppltn/models/: schema.yml
dbt/seoul_ppltn/models/gold/: gold_seoul_ppltn_by_time.sql
dbt/seoul_ppltn/models/silver/: silver_seoul_ppltn.sql
dbt/seoul_ppltn/tests/: assert_silver_not_empty.sql
docs/superpowers/plans/: 2026-06-28-airflow-r2-collector.md
docs/superpowers/specs/: 2026-06-28-airflow-r2-collector-design.md
scripts/: bootstrap-cloudflare.sh  check-r2-catalog-auth.sh  deploy.sh  update-nested-git.sh
tests/: test_r2_storage.py  test_seoul_citydata.py
trino/catalog/: iceberg.properties  iceberg_dev.properties
